@@ -1,3 +1,9 @@
+2004-03-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclNamesp.c (NsEnsembleImplementationCmd): Fix messed up
+	handling of strncmp result which just happened to work in some
+	libc implementations. [Bug 922752]
+
 2004-03-23  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
 
 	* doc/StringObj.3: Inverted the sense of the documentation of how
